CloudAlpacas/salesforce/main/default/objects/SDO_SFS_Field_Capacity__c/fields/Forecasted_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Capacity__c</fullName>
    <label>Forecasted Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>